RESOLVED FIXED291711
Web Inspector: Closing JSContext inspector while execution is paused hangs owner app
https://bugs.webkit.org/show_bug.cgi?id=291711
Summary Web Inspector: Closing JSContext inspector while execution is paused hangs ow...
Qianlang Chen
Reported 2025-04-17 14:45:49 PDT
Attachments
Qianlang Chen
Comment 1 2025-04-17 14:56:00 PDT
EWS
Comment 2 2025-04-22 02:20:43 PDT
Committed 293950@main (8867ffb89ae1): <https://commits.webkit.org/293950@main> Reviewed commits have been landed. Closing PR #44223 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.