Web Inspector: Closing JSContext inspector while execution is paused hangs owner app rdar://142537911 https://bugs.webkit.org/show_bug.cgi?id=291711

Reviewed by Devin Rousso.

When closing Web Inspector and disconnecting the frontend from the
debuggable, we have the logic to resume code execution if it was paused.
Resuming execution by default notifies the frontend via RemoteConnectionToTarget::sendMessageToFrontend,
which tries to grab the m_targetMutex, but that was already grabbed
in RemoteConnectionToTarget::close (in the callback with dispatchAsyncOnTarget).
This resulted in a deadlock.

   - The reason why this deadlocking only happens for JSContexts is
     because the other kinds of debuggables call into a different thread
     at some point to complete the disconnecting process. PageDebuggable
     and WebPageDebuggable call callOnMainThreadAndWait in the
     debuggables' disconnect method; for service workers, postDebuggerTask
     is used in ServiceWorkerInspectorProxy::disconnectFromWorker.
     JSContext does everything on the same thread that calls disconnect.

If the frontend were going to be closed anyway, RemoteConnectionToTarget
should be able to avoid sending the frontend any messages, and that's
the logic behind this patch.

* Source/JavaScriptCore/inspector/remote/RemoteConnectionToTarget.cpp:
(Inspector::RemoteConnectionToTarget::setup):
(Inspector::RemoteConnectionToTarget::sendMessageToTarget):
(Inspector::RemoteConnectionToTarget::close):
(Inspector::RemoteConnectionToTarget::targetClosed):
(Inspector::RemoteConnectionToTarget::sendMessageToFrontend):
* Source/JavaScriptCore/inspector/remote/RemoteConnectionToTarget.h:
* Source/JavaScriptCore/inspector/remote/cocoa/RemoteConnectionToTargetCocoa.mm:
(Inspector::RemoteConnectionToTarget::setup):
(Inspector::RemoteConnectionToTarget::targetClosed):
(Inspector::RemoteConnectionToTarget::close):
(Inspector::RemoteConnectionToTarget::sendMessageToTarget):
(Inspector::RemoteConnectionToTarget::sendMessageToFrontend):

Canonical link: https://commits.webkit.org/293950@main