Source/JavaScriptCore/inspector/remote/RemoteConnectionToTarget.cpp
@@ -67,7 +67,7 @@ bool RemoteConnectionToTarget::setup(bool isAutomaticInspection, bool automatica
     else if (auto* automationTarget = dynamicDowncast<RemoteAutomationTarget>(*target))
         automationTarget->connect(*this);
 
-    m_connected = true;
+    m_connectionState = ConnectionState::Connected;
     RemoteInspector::singleton().updateTargetListing(targetIdentifier);
     RemoteInspector::singleton().setupCompleted(targetIdentifier);
     return true;
@@ -75,6 +75,9 @@ bool RemoteConnectionToTarget::setup(bool isAutomaticInspection, bool automatica
 
 void RemoteConnectionToTarget::sendMessageToTarget(String&& message)
 {
+    if (m_connectionState == ConnectionState::Closed)
+        return;
+
     RefPtr<RemoteControllableTarget> target;
     {
         Locker locker { m_targetMutex };
@@ -93,7 +96,7 @@ void RemoteConnectionToTarget::close()
         if (RefPtr target = m_target.get()) {
             targetIdentifier = target->targetIdentifier();
 
-            if (m_connected)
+            if (m_connectionState.exchange(ConnectionState::Closed) == ConnectionState::Connected)
                 target->disconnect(*this);
 
             m_target = nullptr;
@@ -107,6 +110,7 @@ void RemoteConnectionToTarget::close()
 void RemoteConnectionToTarget::targetClosed()
 {
     Locker locker { m_targetMutex };
+    m_connectionState = ConnectionState::Closed;
     m_target = nullptr;
 }
 
@@ -118,6 +122,9 @@ std::optional<TargetID> RemoteConnectionToTarget::targetIdentifier() const
 
 void RemoteConnectionToTarget::sendMessageToFrontend(const String& message)
 {
+    if (m_connectionState == ConnectionState::Closed)
+        return;
+
     std::optional<TargetID> targetIdentifier;
     {
         Locker locker { m_targetMutex };
